@@ -12,12 +12,14 @@ isEmpty(TARGET_LIB) {
 
 HEADERS += parser.h \
            statprinter.h \
-           abstractsensorhandler.h
+           abstractsensorhandler.h \
+    clientadmin.h
 
 SOURCES += main.cpp \
            parser.cpp \
            statprinter.cpp \
-           abstractsensorhandler.cpp
+           abstractsensorhandler.cpp \
+           clientadmin.cpp
 
 SENSORFW_INCLUDEPATHS = ../.. \
                         ../../include \
@@ -46,6 +48,8 @@ equals(TARGET_LIB,qmsystem2) {
 equals(TARGET_LIB,qtmob) {
     HEADERS += sensorhandler_qtmob.h
     SOURCES += sensorhandler_qtmob.cpp
+    MOBILITY += sensors
+    CONFIG += mobility
     LIBS += -lQtSensors
 }
 
